fixed broken image links

--- a/leonardo/css/about-us.css
+++ b/leonardo/css/about-us.css
@@ -115,7 +115,7 @@ nav ul {
 }
 
 .hero {
-    background-image: url('/Images/young-woman-using-home-technology\ 2.png');
+    background-image: url('../images/young-woman-using-home-technology\ 2.png');
     background-repeat: no-repeat;
     background-size: cover;
     height: 50rem;
