--- a/leonardo/css/mid-mobile-380.css
+++ b/leonardo/css/mid-mobile-380.css
@@ -120,7 +120,7 @@
     }
     
     .hero {
-        background: url('images/modern-home-office-with-technology-decoration-generated-by-ai\ 1.png');
+        background: url('../images/modern-home-office-with-technology-decoration-generated-by-ai\ 1.png');
         min-height: 80vh;
         background-size: cover;
         background-clip: border-box;
@@ -415,7 +415,7 @@
         max-width: 100vw;
         min-height: 40vh;
         color: var(--white);
-        background: url('images/young-woman-using-home-technology\ 2.png');
+        background: url('../images/young-woman-using-home-technology\ 2.png');
         background-size: cover;
     }
     .inspired .content-wrapper{
@@ -771,7 +771,7 @@
     }
     .app-links {
         background-color: var(--light-green);
-        padding: 2rem 0 4rem;
+        padding: 2rem 0 1rem;
         width: 100%;
         min-height: 80vh;
     }
@@ -787,17 +787,18 @@
     }
     .app-links .app-link-wrapper img#tab{
         left: -18rem;
+        display: none;
     }
     .app-links .app-link-wrapper img#iphone{
         top: -25%;
-        right: -1%;
+        left: -1%;
         display: block;
     }
     
     
     /* Support Page Styling */
     .help{
-        padding: 4rem 14rem;
+        padding: 3rem 1rem;
     }
     .help h5{
         font-size: 2rem;
@@ -807,41 +808,45 @@
         margin: 2rem 0;
     }
     .help form input {
-        width: 20rem;
-        height: 4.8rem;
+        width: 8rem;
+        height: 3.8rem;
         border-radius: 1rem;
         border: 0.12rem solid #818282;
-        margin-right: 1rem;
+        margin-right: 0.5rem;
     }
     .help form input::placeholder {
-        padding-left: 2rem;
+        padding-left: 0.2rem;
+    }
+    .help form button {
+        padding: 1rem;
+        margin-top: 2rem;
     }
     .bg-big{
-        min-height: 45vh;
-        background: url('..images/unsplash_laptop.png');
-        width: 80vw;
+        min-height: 30vh;
+        background: url('../images/unsplash_laptop.png');
+        width: 90vw;
         background-size: cover;
         margin: auto;
         border-radius: 1.5rem;
     }
     .bg-big .overlay{
-        min-height: 45vh;
-        width: 80vw;
+        min-height: 30vh;
+        width: 90vw;
         border-radius: 1.5rem;
     }
     .bg-big h3 {
-        padding-bottom: 3rem;
-        font-size: 3.5rem;
+        padding-bottom: 1.8rem;
+        font-size: 1.8rem;
         color: var(--white);
         text-align: center;
         padding-top: 11rem;
         position: relative;
     }
     .bg-big input[type=search] {
-        margin-left: 18%;
+        margin-left: 13%;
         background-color: #cce6e63e;
         position: relative;
-        width: 53.5rem;
+        width: 20.5rem;
         height: 4rem;
         border: 0.2rem solid var(--light-green);
         border-radius: 1rem;
@@ -851,15 +856,15 @@
         padding: 0 2rem;
     }
     .faq {
-        padding: 1rem 8rem 5rem 12rem;
+        padding: 1rem 2rem 5rem 2rem;
     }
     .faq h3{
-        font-size: 3rem;
+        font-size: 2rem;
         text-align: center;
         padding-bottom: 3rem;
     }
     .faq .questions-text {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
     }
     .faq .border-bottom {
         border-bottom: 0.1rem solid var(--pure-black);
@@ -886,10 +891,10 @@
         padding: 2rem 0;
     }
     .repair .repair-cards .flex-item {
-        width: 28vw;
+        width: 30vw;
         margin: 0.5%;
         background-color: var(--light-green);
-        height: 15vh;
+        height: 10vh;
         border-radius: 1.5rem;
         text-align: center;
         padding: 3rem 0 2rem;
@@ -897,7 +902,7 @@
         box-shadow: 0.01rem 0.01rem 0.8rem 0.003rem var(--mid-green);
     }
      .repair .repair-cards .flex-item h5{
-        font-size: 2rem;
+        font-size: 1rem;
     }
     .repair .repair-cards .flex-item h5 a{
         text-decoration: none;
@@ -908,23 +913,30 @@
 
     .connect {
         padding: 0 !important;
+        height: auto;
+        margin: 0 !important;
     }
     .connect .image-wrapper {
-        width: 40%;
+        position: relative;
+        width: 100%;
     }
     
     .connect .content-wrapper .text-wrapper {
+        position: relative;
         flex-direction: column;
         align-items: center;
         align-content: center;
-        width: 40%;
+        width: 100%;
         margin: auto;
+        top: 40rem;
     }
     .connect .content-wrapper .text-wrapper .flex-item {
         padding: 1rem 0;
     }
     .connect .image-wrapper img{
-        scale: 65%;
+        position: absolute;
+        left: 0;
+        width: 100%;
     }
     .connect .text-wrapper p{
         font-size: 1.6rem;
@@ -935,6 +947,6 @@
         text-align: center;
     }
     .app-links .app-link-wrapper{
-        padding: 6rem 0 0 4rem;
+        padding: 1rem 0 0 1rem;
     }
 }
