--- a/leonardo/css/mini-mobile-320.css
+++ b/leonardo/css/mini-mobile-320.css
@@ -33,7 +33,7 @@
         padding: 1rem 0.5rem 1rem 1rem;
     }
     .lang-section .empty {
-        width: 85vw;
+        width: 50%;
     }
     .lang-section .icons ul li {
         float: left;
@@ -51,7 +51,7 @@
         border-right: 0.3rem solid var(--white);
     }
     .lang-section #padding-right {
-        padding-right: 3.5rem;
+        padding-right: 1.5rem;
     }
     .nav-container{
         background: var(--light-green);
@@ -781,7 +781,7 @@
         margin: 2rem 0;
     }
     .help form input {
-        width: 20rem;
+        width: 10rem;
         height: 4.8rem;
         border-radius: 1rem;
         border: 0.12rem solid #818282;
