--- a/leonardo/css/main.css
+++ b/leonardo/css/main.css
@@ -789,6 +789,29 @@ button, a.button{
     width: 100%;
     text-align: right;
 }
+.faq-item{
+    border-bottom: 0.1rem solid var(--black);
+    margin-bottom: 1rem;
+}
+.faq-item .question {
+    background-color: var(--light-green);
+    padding: 2rem;
+    font-size: 1.6rem;
+    list-style: none;
+}
+.faq-item .question-tab{
+    display: inline-block;
+    width: 96%;
+}
+.faq-response {
+    width: 100%;
+    height: auto;
+    background-color: var(--white);
+    font-size: 1.6rem;
+    padding: 1rem;
+    list-style: none;
+    margin-bottom: 1rem;
+}
 .repair {
     background-color: var(--mid-green);
     padding: 3rem 0;
