--- a/aboutUs tablet.css
+++ b/aboutUs tablet.css
@@ -8,6 +8,20 @@ html {
     font-size: 62.5%;
 }
 
+
+@media screen and (max-width: 1280px) {
+    
+    .sub {
+        margin: 0 1rem;
+    }
+
+    .sub h3 {
+        font-size: 2rem;
+    }
+}
+
+
+
 @media screen and (max-width: 1024px) {
    
     #logo {
@@ -129,6 +143,199 @@ html {
     }
    
 }
+
+
+
+@media screen and (max-width: 912px) {
+    
+    #logo {
+        margin-left: 0;
+        margin-right: 2rem;
+    }
+
+    #contact {
+        margin-left: 3rem;
+    }
+
+    nav a {
+        font-size: 1.2rem;
+    }
+
+    .intro-text h3 {
+        font-size: 2rem;
+    }
+
+    .sub h3 {
+        font-size: 1.3rem;
+    }
+
+    .four {
+        height: 123rem;
+    }
+
+    .question5 h5 {
+        font-size: 1.8rem;
+    }
+
+    .partner1 img {
+        width: 12rem;
+    }
+
+    .partner2 img {
+        width: 12rem;
+    }
+
+    .partner3 img {
+        width: 12rem;
+    }
+
+    footer {
+        height: 110rem;
+    }
+}
+
+
+
+
+
+
+@media screen and (max-width: 853px) {
+    
+    #logo {
+        margin-left: 0;
+        margin-right: 4rem;
+    }
+
+    nav a {
+        font-size: 1rem;
+    }
+
+    nav li {
+        padding: 3rem 1rem;
+    }
+
+    .intro {
+        padding-top: 8rem;
+        padding-left: 14rem;
+    }
+
+    .intro h2 {
+        font-size: 1.5rem;
+    }
+
+    .intro p {
+        font-size: 1rem;
+    }
+
+    .hero {
+        height: 30rem;
+    }
+
+    #overlay {
+        height: 30rem;
+    }
+
+    .intro-text h3 {
+         font-size: 1.7rem;
+    }
+
+    .intro-text p {
+        font-size: 1rem;
+    }
+
+    .intro-text {
+        padding-top: 10rem;
+    }
+
+    .intro-text2 h3 {
+        font-size: 3rem;
+    }
+
+    .intro-text2 p {
+        font-size: 1.5rem;
+    }
+
+    .sub h3 {
+        font-size: 1.3rem;
+    }
+
+    .sub a {
+        padding: 1.5rem 2.5rem;
+        font-size: 1.5rem;
+    }
+
+    #shift {
+        padding-bottom: 11rem;
+    }
+
+    .sub {
+        height: 27rem;
+    }
+
+    .big2 h3 {
+        font-size: 2rem;
+    }
+
+    #comfort {
+        left: -6.5rem;
+    }
+
+    .dummy {
+        margin-left: 0.5rem;
+    }
+
+    .four {
+        min-height: 130rem;
+    }
+
+    .question5 h5 {
+        font-size: 1.8rem;
+    }
+
+    .freq h3 {
+        font-size: 2.5rem;
+    }
+
+    .partner1 img {
+        width: 10rem;
+    }
+
+    .partner2 img {
+        width: 10rem;
+    }
+
+    .partner3 img {
+        width: 10rem;
+    }
+
+    .smart {
+        padding-top: 2rem;
+    }
+
+    .smart-img img {
+        width: 30rem;
+    }
+
+    #iphone {
+        width: 10rem;
+        bottom: 11rem;
+    }
+
+    .flexbox3 {
+        margin-left: 1rem;
+    }
+
+    th {
+        padding: 4rem 1.5rem;
+    }
+
+    td {
+        padding: 1.5rem 1.5rem;
+    }
+}
+
+
+
 
 
 @media screen and (max-width: 820px) {
@@ -291,5 +498,196 @@ html {
 
     .sub a {
         padding: 1.5rem 2rem;
+    }
+}
+
+
+@media screen and (max-width: 540px) {
+    
+
+    .start {
+       display: none;
+    }
+
+    #bars {
+        font-size: 4rem;
+        display: flex;
+        margin-left: 30rem;
+    }
+
+    .intro {
+        padding-top: 10rem;
+        padding-left: 3rem;
+    }
+
+    .intro h2 {
+        font-size: 1.2rem;
+    }
+
+    .intro p {
+        font-size: 1rem;
+    }
+
+    .hero {
+        height: 30rem;
+    }
+
+    .one {
+        height: 70rem;
+    }
+
+    .flexbox {
+        flex-direction: column;
+    }
+
+    .intro-text {
+        padding-top: 0;
+        padding-left: 5rem;
+        padding-bottom: 5rem;
+    }
+
+    .intro-text h3 {
+        font-size: 2rem;
+    }
+
+    .intro-text2 p {
+        font-size: 1rem;
+    }
+
+    .two {
+        height: 230rem;
+    }
+
+    .big {
+        min-height: 200rem;
+    }
+
+    .flexbox1 {
+        flex-direction: column;
+    }
+
+    .flexbox2 {
+        flex-direction: column;
+    }
+
+    .sub {
+        margin-top: 3rem;
+    }
+
+    .sub h3 {
+        font-size: 2rem;
+    }
+    
+    #shift2 {
+        padding-bottom: 8rem;
+    }
+
+    .big2 h3 {
+        font-size: 1.5rem;
+    }
+
+    .big2 p {
+        font-size: 1.2rem;
+    }
+
+    #main {
+        width: 45rem;
+        margin-left: 2rem;
+    }
+
+    #light {
+        display: none;
+    }
+
+    #comfort {
+        display: none;
+    }
+
+    #security {
+        display: none;
+    }
+
+    .data h3 {
+        font-size: 2.5rem;
+    }
+
+    .data p {
+        font-size: 1rem;
+    }
+
+    .freq h3 {
+        font-size: 1.7rem;
+    }
+
+    .question h5 {
+        font-size: 1.3rem;
+    }
+
+    .question2 h5 {
+        font-size: 1.3rem;
+    }
+
+    .question3 h5 {
+        font-size: 1.3rem;
+    }
+
+    .question4 h5 {
+        font-size: 1.2rem;
+    }
+    .question5 h5 {
+        font-size: 1.1rem;
+    }
+
+    .freq {
+        min-height: 55rem;
+    }
+    
+    .partners h3 {
+        font-size: 3rem;
+    }
+
+    span {
+        font-size: 3rem;
+    }
+
+    .partner1 img {
+       width: 7rem;
+    }
+
+    .partner2 img {
+        width: 7rem;
+    }
+
+    .partner3 img {
+        width: 7rem;
+    }
+
+    .partner4 img {
+        width: 7rem;
+    }
+
+    .smart h3 {
+        font-size: 2rem;
+    }
+
+    .smart p {
+        font-size: 1.5rem;
+    }
+
+    .service h3 {
+        font-size: 3rem;
+    }
+
+    th {
+        font-size: 1.5rem;
+        padding: 4rem 1rem;
+    }
+
+    td {
+        padding: 1.5rem 1rem;
+    }
+
+    footer {
+        height: 110rem;
     }
 }
