--- a/aboutUs.css
+++ b/aboutUs.css
@@ -210,7 +210,7 @@ nav ul {
     width: 40rem;
     background-color: rgb(224, 255, 255);
     border-radius: 15px;
-    padding: 2rem;
+    padding-left: 2rem;
 }
 
 .sub h3 {
@@ -220,6 +220,10 @@ nav ul {
 
 #shift {
     padding-bottom: 10rem;
+}
+
+#adjust {
+    padding-top: 10rem;
 }
 
 .sub a {
@@ -434,20 +438,20 @@ nav ul {
     font-size: 2rem;
     font-weight: 500;
     padding: 4rem 0;
-  }
+}
   
   .question4 .fa-chevron-up {
       font-size: 5rem;
       position: absolute;
       right: 4rem;
       top: 42.5rem;
-  }
+}
 
   .question5 h5 {
     font-size: 2rem;
     font-weight: 500;
     padding: 4rem 0;
-  }
+}
   
   .question5 .fa-chevron-up {
       font-size: 5rem;
