--- a/aboutUs tablet.css
+++ b/aboutUs tablet.css
@@ -11,6 +11,19 @@ html {
 
 @media screen and (max-width: 1280px) {
     
+    #logo {
+        margin-right: 7rem;
+        margin-left: 3rem;
+    }
+
+    #contact {
+        margin-left: 4rem;
+    }
+
+    nav li {
+        padding: 3rem 2rem;
+    }
+
     .sub {
         margin: 0 1rem;
     }
@@ -483,6 +496,9 @@ html {
 
 @media screen and (max-width: 768px) {
     
+    .intro {
+        padding-left: 8rem;
+    }
     
     .intro-text{
         padding-top: 10rem;
@@ -499,6 +515,295 @@ html {
     .sub a {
         padding: 1.5rem 2rem;
     }
+}
+
+
+@media screen and (max-width: 642px) {
+    
+    .start {
+        display: none;
+    }
+
+    #bars {
+        font-size: 4rem;
+        display: flex;
+        margin-left: 40rem;
+    }
+
+    .intro {
+        padding-left: 7rem;
+        padding-top: 10rem;
+    }
+    
+    .intro h2 {
+        font-size: 1.2rem;
+    }
+    
+    .intro p {
+        font-size: 1rem;
+    }
+
+    .image img {
+        width: 30rem;
+    }
+
+    .intro-text {
+        padding-top: 6rem;
+    }
+    .intro-text2 p {
+       font-size: 1.2rem;
+    }
+
+    .flexbox1 {
+        flex-direction: column;
+    }
+
+    .sub {
+        margin-top: 3rem;
+        margin-left: 7rem;
+    }
+
+    .sub h3 {
+        font-size: 2rem;
+    }
+
+    #adjust {
+        margin-left: 4rem;
+    }
+
+    .flexbox2 {
+        flex-direction: column;
+    }
+
+    .two {
+        height: 230rem;
+    }
+
+    .big {
+        height: 200rem;
+    }
+ 
+    .big2 h3 {
+        font-size: 1.5rem;
+    }
+
+    #header {
+        display: none;
+    }
+
+    #light {
+        display: none;
+    }
+
+    #comfort {
+        display: none;
+    }
+
+    #security {
+        display: none;
+    }
+
+    .data p {
+        font-size: 1.1rem;
+    }
+
+    .question4 br {
+        display: none;
+    }
+
+    .question5 br {
+        display: none;
+    }
+
+    .partner1 img {
+        width: 6rem;
+    }
+
+    .partner2 img {
+        width: 6rem;
+    }
+
+    .partner3 img {
+        width: 6rem;
+    }
+
+    .smart img {
+        width: 10rem;
+        margin-right: 1rem;
+    }
+
+    .service h3 {
+        font-size: 2.3rem;
+    }
+
+}
+
+
+@media screen and (max-width: 546px) {
+    
+    .start {
+        display: none;
+    }
+
+    #bars {
+        font-size: 4rem;
+        display: flex;
+        margin-left: 30rem;
+    }
+
+    .intro {
+        padding-left: 3rem;
+        padding-top: 10rem;
+    }
+    
+    .intro h2 {
+        font-size: 1.2rem;
+    }
+    
+    .intro p {
+        font-size: 1rem;
+    }
+
+   .intro-text{
+        margin-left: 7rem;
+        margin-bottom: 3rem;      
+    }
+
+   .hero {
+        height: 30rem;
+    }
+
+    .intro-text2 p {
+        font-size: 1rem;
+    }
+
+    .one {
+        height: 70rem;
+    }
+
+    .flexbox {
+        padding-top: 0;
+        flex-direction: column;
+    }
+
+    .flexbox1 {
+        flex-direction: column;
+    }
+
+    .sub {
+        margin-top: 3rem;
+    }
+
+    .sub h3 {
+        font-size: 2rem;
+    }
+
+    #adjust {
+        margin-left: 4rem;
+    }
+
+    .flexbox2 {
+        flex-direction: column;
+    }
+
+    .two {
+        height: 230rem;
+    }
+
+    .big {
+        height: 200rem;
+    }
+
+    .big2 h3 {
+        font-size: 1.5rem;
+    }
+
+    .big2 p {
+        font-size: 1rem;
+    }
+
+    #main {
+        width: 45rem;
+        margin-left: 2rem;
+        margin-top: 3rem;
+    }
+
+    #header {
+        display: none;
+    }
+
+    #light {
+        display: none;
+    }
+
+    #comfort {
+        display: none;
+    }
+
+    #security {
+        display: none;
+    }
+
+    .three {
+        height: 70rem;
+    }
+
+    .data h3 {
+        font-size: 2rem;
+    }
+
+    .data p {
+        font-size: 1rem;
+    }
+
+    .question4 br {
+        display: none;
+    }
+
+    .question5 br {
+        display: none;
+    }
+
+    .partner1 img {
+        width: 6rem;
+    }
+
+    .partner2 img {
+        width: 6rem;
+    }
+
+    .partner3 img {
+        width: 6rem;
+    }
+
+    .smart h3 {
+        font-size: 2rem;
+    }
+
+    .smart p {
+        font-size: 1.5rem;
+    }
+    .smart img {
+        width: 10rem;
+        margin-right: 0.6rem;
+    }
+
+    .service h3 {
+        font-size: 2.3rem;
+    }
+
+    table {
+        margin-left: 0;
+    } 
+
+    th {
+        padding: 4rem 1rem;
+    }
+
+    td {
+        padding: 1.5rem 1rem;
+    }
+
 }
 
 
@@ -691,3 +996,5 @@ html {
         height: 110rem;
     }
 }
+
+
