--- a/accessories mobile.css
+++ b/accessories mobile.css
@@ -215,6 +215,63 @@ html {
 }
 
 
+@media screen and (max-width: 430px) {
+    
+    .flexbox {
+        margin-left: 1rem;
+     }
+
+     .flexbox1 {
+        margin-left: 1rem;
+     }
+}
+
+@media screen and (max-width: 414px) {
+
+     .flexbox {
+        margin-left: 1rem;
+     }
+
+     .flexbox1 {
+        margin-left: 1rem;
+     }
+}
+
+
+@media screen and (max-width: 412px) {
+    
+    #logo {
+        margin-left: 0;
+    }
+
+    #bars {
+        margin-left: 9rem;
+    }
+
+    .flexbox {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .flexbox1 {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .plan p {
+        font-size: 1.1rem;
+    }
+
+    .free, .premium, .business {
+        margin-left: 3rem;
+    }
+
+    td a {
+        font-size: 0.8rem;
+    }
+
+    
+}
 
 
 @media screen and (max-width: 380px) {
@@ -228,10 +285,11 @@ html {
         margin-left: 7rem;
     }
 
-    .intro-text h3 {
-        font-size: 1.7rem;
+    .flexbox {
+        margin-left: 0.5rem;
     }
 
+    
     .intro-text p {
         font-size: 1.2rem;
     }
@@ -269,6 +327,10 @@ html {
         width: 32rem;
     }
 
+    .flexbox1 {
+        margin-left: 0.5rem;
+    }
+
     .smart-img img {
         width: 25rem;
     }
@@ -280,7 +342,7 @@ html {
     }
 
     .free, .premium, .business {
-        margin-left: 1rem;
+        margin-left: 0.3rem;
     }
 
     table {
@@ -300,6 +362,66 @@ html {
 } 
 
 
+@media screen and (max-width: 344px) {
+    
+    #logo {
+        margin-left: 0;
+    }
+
+    #bars {
+        display: flex;
+        font-size: 4rem;
+        margin-left: 2.5rem;
+    }
+
+    .flexbox {
+        margin-left: 0.1rem;
+    }
+
+    .flexbox1 {
+        margin-left: 0.1rem;
+    }
+
+    .free {
+        width: 30rem;
+        height: 65rem;
+    }
+
+    .free h3 {
+        font-size: 1.5rem;
+    }
+
+    .fa-circle-check {
+        margin-right: 0.1rem;
+    }
+    
+    .premium {
+        width: 30rem;
+        height: 75rem;
+    }
+
+    .premium h3 {
+        font-size: 1.5rem; 
+    }
+
+    #try {
+        margin-left: 3rem;
+    }
+
+    .business {
+        width: 30rem;
+        height: 75rem;
+    }
+
+    .business h3 {
+        font-size: 1.5rem; 
+    }
+
+    .free, .premium, .business {
+        margin-left: 1.5rem;
+    }
+
+}
 
 @media screen and (max-width: 320px) {
 
